# JWM

./: .gitignore  .scalafmt.conf  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build.sbt  flake.nix  proto,log  version.sbt
.github/workflows/: build-deploy.yml  build.yml  rebuild-docker-image.yaml  website.yaml
.metals/: metals.lock.db  metals.mv.db
cc/: Context.cc  Context.hh  Window.hh
cc/impl/: Library.cc  Library.hh  Managed.cc
deploy/: settings.xml
docs/: Conventions.md  Getting Started.md  GettingStarted.java  build.md
docs/windows/: build.md
examples/: Example.java  MultipleWindows.java  SingleWindow.java  SkijaBridge.java  SkijaBridgeGL.java  SkijaBridgeMetal.java  SkijaLayer.java  SkijaLayerGL.java  SkijaLayerMetal.java
examples/empty-native/: README.md  build.gradle  settings.gradle
examples/java/: Example.java  Panel.java  PanelLegend.java  PanelTextInput.java  SkijaLayer.java  SkijaLayerGL.java  SkijaLayerMetal.java
examples/metrics/: README.md  build.sbt
examples/native-image/: README.md  build.sbt
examples/sbt/: README.md  build.sbt
linux/: CMakeLists.txt
linux/cc/: App.cc  App.hh  AppX11.cc  AppX11.hh  ClipboardX11.cc  ILayer.cc  ILayer.hh  KeyX11 copy.hh  KeyX11.cc  KeyX11.hh  LayerGL.cc  LayerRaster.cc  MouseButtonX11.cc  MouseButtonX11.hh  ScreensX11.cc  WindowManagerX11.cc  WindowManagerX11.hh  WindowX11.cc  WindowX11.hh
linux/java/: WindowX11.java
macos/: CMakeLists.txt
macos/cc/: App.mm  ApplicationDelegate.hh  ApplicationDelegate.mm  ClipboardMac.mm  ContextGL.mm  ContextMac.hh  ContextMac.mm  ContextMetal.hh  ContextMetal.mm  DockTileProgressBar.hh  DockTileProgressBar.mm  JWMApplicationDelegate.hh  JWMApplicationDelegate.mm  JWMMainView.hh  JWMMainView.mm  JWMWindowDelegate.hh  JWMWindowDelegate.mm  LayerGL.mm  LayerMetal.mm  MainView.hh  MainView.mm  MetalContext.hh  MetalContext.mm  Screen.mm  ThemeMac.mm  Util.hh  Util.mm  Window.hh  Window.mm  WindowDelegate.hh  WindowDelegate.mm  WindowMac.hh  WindowMac.mm  WindowMacTitlebarStyle.hh
macos/java/: ContextMetal.java  ContextMetalOpts.java  LayerMetal.java  MetalContext.java  WindowMac.java  WindowMacTitlebarStyle.java
macos/java/org/jetbrains/jwm/: LayerMetal.java  WindowMac.java
macos/java/skija/: LayerMetalSkija.java
macos/script/: build.py  clean.py
macos/src/: App.cc  Library.hh  Library.mm  MainView.hh  MainView.mm  MetalContext.hh  MetalContext.mm  Window.hh  Window.mm  WindowDelegate.mm  main.mm
macos/src/impl/: Library.mm
macos/src/main/java/org/jetbrains/jwm/: WindowMac.java
project/: BuildNative.scala  Dependencies.scala  Deploy.scala  Versions.scala
script/: build.py  build_utils.py  clean.py  common.py  deploy.py  deploy_full.py  deploy_native.py  deploy_shared.py  icons.py  install.py  native_image.py  package.py  publish_local.py  release.py  run.py
shared/cc/: Context.cc  Context.hh  EnumConverter.hh  JavaClassName.hh  JavaString.cc  JavaString.hh  Key.hh  KeyModifier.hh  Layer.cc  Layer.hh  Log.cc  Log.hh  MouseButton.hh  MouseCursor.hh  Screen.h  StringUTF16.cc  StringUTF16.hh  Theme.hh  ThemeHelper.hh  TouchType.hh  Types.hh  Window.cc  Window.hh  ZOrder.hh
shared/examples/: SingleWindow.java  Window.java
shared/java/: App.java  Clipboard.java  ClipboardEntry.java  ClipboardFormat.java  Context.java  ContextGL.java  ContextGLOpts.java  Event.java  EventClose.java  EventFrame.java  EventKey.java  EventKeyboard.java  EventMouseButton.java  EventMouseMove.java  EventMouseScroll.java  EventPaint.java  EventTextInput.java  EventTextInputMarked.java  EventTouchCancel.java  EventTouchEnd.java  EventTouchFrame.java  EventTouchMove.java  EventTouchStart.java  EventTrackpadTouchCancel.java  EventTrackpadTouchEnd.java  EventTrackpadTouchMove.java  EventTrackpadTouchStart.java  EventWindowAppear.java  EventWindowClose.java  (+39 more)
wayland/: CMakeLists.txt
wayland/cc/: AppWayland.cc  AppWayland.hh  Buffer.cc  Buffer.hh  ClipboardWayland.cc  ClipboardX11.cc  Decoration.cc  Decoration.hh  ILayer.hh  ILayerWayland.cc  ILayerWayland.hh  KeyWayland.cc  KeyWayland.hh  Keyboard.cc  Keyboard.hh  LayerGL.cc  LayerGLWayland.cc  LayerRaster.cc  LayerRasterWayland.cc  MouseButtonWayland.cc  MouseButtonWayland.hh  MouseButtonX11.cc  Output.cc  Output.hh  Pointer.cc  Pointer.hh  ScreenInfo.cc  ScreenInfo.hh  ShmPool.cc  ShmPool.hh  Token.cc  Token.hh  WindowManagerWayland.cc  WindowManagerWayland.hh  WindowManagerX11.cc  WindowManagerX11.hh  WindowWayland.cc  WindowWayland.hh  WindowX11.cc  xdg-shell.c  (+1 more)
wayland/java/: WindowWayland.java
website/: .eslintrc.json  README.md  package.json
windows/: CMakeLists.txt
windows/cc/: AppWin32.cc  AppWin32.hh  ClipboardWin32.cc  ClipboardWin32.hh  ContextWGL.cc  ContextWGL.hh  LayerD3D12.cc  LayerD3D12.hh  LayerGL.cc  LayerGL.hh  LayerRaster.cc  LayerRaster.hh  LayerWGL.cc  LayerWGL.hh  PlatformWin32.hh  Screen.cc  Screen.hh  ScreenWin32.cc  ScreenWin32.hh  SystemWin32.cc  SystemWin32.hh  ThemeHelperWin32.cc  ThemeHelperWin32.hh  ThemeWin32.cc  ThemeWin32.hh  WindowManagerWin32.cc  WindowManagerWin32.hh  WindowWin32.cc  WindowWin32.hh
windows/cc/D3D12/: DX12CommandQueue.cc  DX12CommandQueue.hh  DX12Common.cc  DX12Common.hh  DX12Device.cc  DX12Device.hh  DX12Fence.cc  DX12Fence.hh  DX12SwapChain.cc  DX12SwapChain.hh
windows/cc/GL/: wglext.h
windows/java/: LayerD3D12.java  WindowWin32.java
windows/java/org/jetbrains/jwm/: LayerD3D12.java  ScreenWin32.java  WindowWin32.java
windows/java/skija/: LayerD3D12Skija.java
windows/src/main/cc/: AppWin32.hh  ClipboardWin32.cc  ContextWGL.hh  LayerD3D12.cc  PlatformWin32.hh  ScreenWin32.hh  WindowManagerWin32.cc
windows/src/main/cc/D3D12/: DX12CommandQueue.cc  DX12Common.cc  DX12Common.hh  DX12Device.cc  DX12Device.hh  DX12SwapChain.hh  d3dx12.h
windows/src/main/cc/GL/: glext.h
x11/: CMakeLists.txt
x11/cc/: AppX11.cc  AppX11.hh  ClipboardX11.cc  KeyX11.cc  KeyX11.hh  LayerGLX11.cc  LayerRasterX11.cc  ScreenInfo.cc  ScreenInfo.hh  WindowManagerX11.cc  WindowManagerX11.hh  WindowX11.cc  WindowX11.hh  WindowX11MotifHints.hh
x11/java/: WindowX11.java
(+201 files in other folders)
